--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.21.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "faker": "^5.4.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
