--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "seed": "node seeders/seeds.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "apollo-server-express": "^2.21.0",
-    "bcrypt": "^5.0.0",
+    "apollo-server-express": "^2.16.1",
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
-    "faker": "^5.4.0",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
