--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "apollo-server-express": "^2.16.1",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
